--- a/.github/workflows/fast-failure-fixture.yml
+++ b/.github/workflows/fast-failure-fixture.yml
@@ -1,13 +1,16 @@
-name: Fast Success Fixture
+name: Failure Fixture
 on:
   - push
   - pull_request
 
 jobs:
   suceeds:
-    name: Succeeds Fast
+    name: Fails Slowly
     runs-on: ubuntu-latest
     steps:
       - name: Sleep
         shell: bash
-        run: sleep 10
+        run: sleep 30
+
+      - name: Fail
+        run: echo "Fail" && exit 1
