more readme improvements

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
 name: Wait For Workflows To Succeed
 description: Given a list of local workflow file names, wait for ones that were created for the same push/pull_request event to succeed
+icon: activity
+color: blue
 inputs:
   wait-interval-seconds:
     description: Seconds to wait between checks
