--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -170,3 +170,35 @@ jobs:
       - name: Assert error occurred
         if: ${{ steps.test.outcome != 'failure' }}
         run: echo "This should have failed" && exit 1
+
+  logging-on:
+    name: With logging on
+    runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+
+        - name: Wait with logging on
+          uses: ./
+          with:
+            workflows: fast-success-fixture.yml
+            wait-interval-seconds: 5
+            wait-max-seconds: 60
+            repo-token: ${{ github.token }}
+            debug: "on"
+
+  logging-verbose:
+    name: With logging on
+    runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+
+        - name: Wait with logging on
+          uses: ./
+          with:
+            workflows: fast-success-fixture.yml
+            wait-interval-seconds: 5
+            wait-max-seconds: 60
+            repo-token: ${{ github.token }}
+            debug: verbose
