--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -2,11 +2,30 @@ name: Acceptance Tests
 on:
   - push
   - pull_request
+  - pull_request_target
 
 jobs:
+  handles-pull-request-target:
+    name: Can handle a pull_request_target event
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'pull_request_target' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Wait for success-fixture
+        uses: ./
+        with:
+          workflows: success-fixture.yml
+          wait-interval-seconds: 5
+          wait-max-seconds: 60
+          repo-token: ${{ github.token }}
+          debug: "on"
+
   with-succeeding-workflow:
     name: Should Succeed (waiting for succeeding workflow)
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -22,6 +41,7 @@ jobs:
   with-two-succeeding-workflows:
     name: Should Succeed (waiting for two succeeding workflows)
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -39,6 +59,7 @@ jobs:
   workflow-doesnt-exist:
     name: Should Fail (waiting for non existent workflow)
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -60,6 +81,7 @@ jobs:
   workflow-run-failed:
     name: Should Fail (waiting for failing workflow)
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -81,6 +103,7 @@ jobs:
   workflow-succeeded-in-the-past:
     name: Should Fail (waiting for workflow that isn't running now but did in the past)
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -105,6 +128,7 @@ jobs:
   one-failed-one-succeeded-success-first:
     name: Should Fail (one failed and one succeeded with success first)
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -128,6 +152,7 @@ jobs:
   one-failed-one-succeeded-failure-first:
     name: Should Fail (one failed and one succeeded with failure first)
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -151,6 +176,7 @@ jobs:
   two-failed:
     name: Should Fail (waiting on two failed)
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -174,6 +200,7 @@ jobs:
   logging-on:
     name: With logging on
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -190,6 +217,7 @@ jobs:
   logging-verbose:
     name: With logging verbose
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request_target' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
