--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -1,13 +1,21 @@
 name: Acceptance Tests
 on:
-  - push
-  - pull_request
+  push:
+    branches: main
+  pull_request: {}
 
 jobs:
+  give-fixtures-a-chance-to-run:
+    name: Give Fixtures A Chance To Run
+    runs-on: ubuntu-latest
+    steps:
+      - run: sleep 20
+
   handles-waiting-for-pull-request-target-from-pull-request:
     name: Can handle a pull_request_target event from a pull request event
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'pull_request' }}
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,6 +31,7 @@ jobs:
   with-succeeding-workflow:
     name: Should Succeed (waiting for succeeding workflow)
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -38,6 +47,7 @@ jobs:
   with-two-succeeding-workflows:
     name: Should Succeed (waiting for two succeeding workflows)
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -55,6 +65,7 @@ jobs:
   workflow-doesnt-exist:
     name: Should Fail (waiting for non existent workflow)
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -76,6 +87,7 @@ jobs:
   workflow-run-failed:
     name: Should Fail (waiting for failing workflow)
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -97,6 +109,7 @@ jobs:
   workflow-succeeded-in-the-past:
     name: Should Fail (waiting for workflow that isn't running now but did in the past)
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -121,6 +134,7 @@ jobs:
   one-failed-one-succeeded-success-first:
     name: Should Fail (one failed and one succeeded with success first)
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -144,6 +158,7 @@ jobs:
   one-failed-one-succeeded-failure-first:
     name: Should Fail (one failed and one succeeded with failure first)
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -167,6 +182,7 @@ jobs:
   two-failed:
     name: Should Fail (waiting on two failed)
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -190,6 +206,7 @@ jobs:
   logging-on:
     name: With logging on
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -206,6 +223,7 @@ jobs:
   logging-verbose:
     name: With logging verbose
     runs-on: ubuntu-latest
+    needs: give-fixtures-a-chance-to-run
     steps:
       - name: Checkout
         uses: actions/checkout@v2
